Keep gtk_window_set_hide_titlebar_when_maximized working

This broke in 510c2cdfb6362568f4384790dc06e0b1b4aba0e5.

https://bugzilla.gnome.org/show_bug.cgi?id=740287